--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Week 6</title>
   </head>
   <body>
-    <h2>This is a heading</h2>
+    <!-- <h2>This is a heading</h2>
     <div class="container">
       <h2>This is another heading</h2>
       <p>This paragraph comes after the heading.</p>
@@ -25,9 +25,26 @@
       </ul>
     </div>
     <a title="BCIT homepage" href="https://bcit.ca">Links</a>
-<ul>
-<li><a title ="programs" href="https://www.bcit.ca/study/">Programs</a></li>
-<li><a title ="admission" href="https://www.bcit.ca/admission">Admission</a></li>
-</ul>
+    <ul>
+      <li>
+        <a title="programs" href="https://www.bcit.ca/study/">Programs</a>
+      </li>
+      <li>
+        <a title="admission" href="https://www.bcit.ca/admission">Admission</a>
+      </li>
+    </ul> --> 
+    <!-- <img
+      src="https://upload.wikimedia.org/wikipedia/commons/6/6f/BCIT_logo.svg"
+      alt="BCIT logo"
+      width="150"
+      height="136"
+    />
+    <p>This sentence should appear right of the image.</p>
+    <p class="below">This sentence should appear below the image.</p> -->
+    <div class="container">
+      <p>My first paragraph.</p>
+      <div class="target">Target</div>
+      <p>My second paragrpah</p>
+      </div>
   </body>
 </html>
